--- a/TicketManager/userLogin.xaml
+++ b/TicketManager/userLogin.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Login" Height="230" Width="308" WindowStyle="ToolWindow" MaxHeight="230" MinHeight="230" MaxWidth="308" MinWidth="308">
     <Grid>
-        <Image HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="300" Source="pack://siteoforigin:,,,/Resources/Logo.png"/>
+        <Image HorizontalAlignment="Left" Height="100" Name="MainLogo" VerticalAlignment="Top" Width="300"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="10,105,0,0" TextWrapping="Wrap" Name="Username" VerticalAlignment="Top" Width="280"/>
         <PasswordBox HorizontalAlignment="Left" Height="23" Margin="10,133,0,0" Width="280" Name="Password" VerticalAlignment="Top"/>
         <Button Content="Login" HorizontalAlignment="Left" Margin="10,161,0,0" VerticalAlignment="Top" Width="280" Click="Button_Click"/>
