--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -1,12 +1,25 @@
 ﻿<Window x:Class="TicketManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" MinWidth="800" MinHeight="500">
     <Grid>
         <TabControl Margin="0,0,0,0">
             <TabItem Header="Tickets">
-                <Grid Background="#FFE5E5E5">
-                    <ListBox x:Name="TicketsListBox"/>
+                <Grid Background="#FFE5E5E5" Margin="0,-7,0,7">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="300"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <ListView x:Name="listView">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Ticket ID" Width="100" DisplayMemberBinding="{Binding returnTicketId}"/>
+                                <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding returnName}"/>
+                                <GridViewColumn Header="Ticket Purchased" Width="100" DisplayMemberBinding="{Binding Id}"/>
+                                <GridViewColumn Header="Ticket Valid" Width="100" DisplayMemberBinding="{Binding stage}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
                 </Grid>
             </TabItem>
             <TabItem Header="Scan Ticket">
