--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -21,9 +21,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ComboBox Grid.Column="1" Name="selectEvent" SelectedIndex="0" VerticalAlignment="Top" Width="275" HorizontalAlignment="Right" Margin="0,10,10,0">
-                        <ComboBoxItem Visibility="Collapsed">Choose event</ComboBoxItem>
-                    </ComboBox>
+                    <ComboBox Grid.Column="1" VerticalAlignment="Top" Width="275" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" />
                 </Grid>
             </TabItem>
             <TabItem Header="Scan Ticket">
