--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -21,7 +21,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ComboBox Grid.Column="1" VerticalAlignment="Top" Width="275" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" />
+                    <ComboBox Grid.Column="1" SelectedIndex="0" VerticalAlignment="Top" Width="275" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" SelectionChanged="selectEvent_SelectionChanged" />
                 </Grid>
             </TabItem>
             <TabItem Header="Scan Ticket">
