--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -29,7 +29,15 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <ComboBox Grid.Column="1" SelectedIndex="0" VerticalAlignment="Top" Width="275" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" SelectionChanged="selectEvent_SelectionChanged" />
+            <ComboBox Grid.Column="1" SelectedIndex="0" VerticalAlignment="Top" Width="280" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" SelectionChanged="selectEvent_SelectionChanged" />
+            <Expander Grid.Column="1" Header="Scan Ticket" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="280">
+                <StackPanel Margin="10,4,0,0">
+                    <Label Content="Ticket Id:" HorizontalAlignment="Left" Margin="0,0,0,0"  VerticalAlignment="Top"/>
+                    <TextBox HorizontalAlignment="Left" Height="24" Margin="60,-28,0,0" TextWrapping="Wrap" Name="TicketId" Width="198"/>
+
+                    <Button Content="Validate Ticket" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="248"/>
+                </StackPanel>
+            </Expander>
         </Grid>
 
     </Grid>
