--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -39,14 +39,20 @@
                 </ListView.View>
             </ListView>
             <ComboBox Grid.Column="1" SelectedIndex="0" VerticalAlignment="Top" Width="280" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" SelectionChanged="selectEvent_SelectionChanged" />
-            <Expander Grid.Column="1" Header="Scan Ticket" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="280">
-                <StackPanel Margin="10,4,0,0">
-                    <Label Content="Ticket Id:" HorizontalAlignment="Left" Margin="0,0,0,0"  VerticalAlignment="Top"/>
-                    <TextBox HorizontalAlignment="Left" Height="24" Margin="60,-28,0,0" TextWrapping="Wrap" Name="TicketId" Width="198" KeyDown="OnKeyDownHandler"/>
 
-                    <Button Content="Validate Ticket" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="248"/>
-                </StackPanel>
-            </Expander>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="5" Margin="10,37,0,0" VerticalAlignment="Top" Width="280"/>
+
+            <Label Content="Ticket Id:" HorizontalAlignment="Left" Margin="10,47,0,0"  VerticalAlignment="Top" Grid.Column="1"/>
+            <TextBox HorizontalAlignment="Left" VerticalAlignment="Top" Height="24" Margin="67,47,0,414" TextWrapping="Wrap" Name="TicketId" Width="223" KeyDown="OnKeyDownHandler" Grid.Column="1"/>
+            <Button Content="Validate Ticket" HorizontalAlignment="Left" Margin="10,78,0,0" VerticalAlignment="Top" Width="280" Grid.Column="1"/>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="5" Margin="10,105,0,0" VerticalAlignment="Top" Width="280"/>
+
+            <Label Content="Search" Grid.Column="1" HorizontalAlignment="Left" Margin="10,115,0,0" VerticalAlignment="Top"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="60,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230"/>
+            <Button Content="Search For Ticket" Grid.Column="1" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="280" Name="SearchTicket" Click="SearchTicket_Click"/>
+
+
+
             <Button Content="Test button: print pdf" Name="debugPdfPrint" Grid.Column="1" HorizontalAlignment="Left" Margin="140,453,0,0" VerticalAlignment="Top" Width="150" Click="scrollToIndexItem"/>
         </Grid>
 
