--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -40,7 +40,7 @@
             </ListView>
             <ComboBox Grid.Column="1" SelectedIndex="0" VerticalAlignment="Top" Width="280" HorizontalAlignment="Right" Margin="0,10,10,0" Name="selectEvent" SelectionChanged="selectEvent_SelectionChanged" />
 
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="5" Margin="10,37,0,0" VerticalAlignment="Top" Width="280"/>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="5" Margin="10,37,0,0" VerticalAlignment="Top" Width="280" />
 
             <Label Content="Ticket Id:" HorizontalAlignment="Left" Margin="10,47,0,0"  VerticalAlignment="Top" Grid.Column="1"/>
             <TextBox HorizontalAlignment="Left" VerticalAlignment="Top" Height="24" Margin="67,47,0,414" TextWrapping="Wrap" Name="TicketId" Width="223" KeyDown="OnKeyDownHandler" Grid.Column="1"/>
@@ -48,7 +48,7 @@
             <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="5" Margin="10,105,0,0" VerticalAlignment="Top" Width="280"/>
 
             <Label Content="Search" Grid.Column="1" HorizontalAlignment="Left" Margin="10,115,0,0" VerticalAlignment="Top"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="60,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="60,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230" Name="SearchInput"/>
             <Button Content="Search For Ticket" Grid.Column="1" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="280" Name="SearchTicket" Click="SearchTicket_Click"/>
 
 
