--- a/ProgramUpdater/MainWindow.xaml
+++ b/ProgramUpdater/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="ProgramUpdater.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="84" Width="525" ResizeMode="NoResize" WindowStyle="ToolWindow">
     <Grid>
-        
+        <ProgressBar Name="DownloadProgressar"/>
     </Grid>
 </Window>
