--- a/TicketManager/MainWindow.xaml
+++ b/TicketManager/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TicketManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" MinWidth="800" MinHeight="500">
+        Title="MainWindow" MinWidth="800" MinHeight="500" Height="500" Width="800">
     <Grid>
         <Menu IsMainMenu="True" VerticalAlignment="Top" Height="20">
             <MenuItem Header="_File">
@@ -15,7 +15,7 @@
             </MenuItem>
         </Menu>
 
-        <Grid Background="#FFE5E5E5" Margin="0,20,0,0">
+        <Grid Background="#FFE5E5E5" Margin="0,20,0,20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="300"></ColumnDefinition>
@@ -56,5 +56,6 @@
             <Button Content="Search For Ticket" Grid.Column="1" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="280" Name="SearchTicket" Click="SearchTicket_Click"/>
         </Grid>
 
+        <StatusBar Height="20" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
